# email-newsletter

./: Cargo.toml  LICENSE  README.md  configuration.yml
.github/workflows/: build.yml  test.yml
migrations/: 20220821142844_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: greet.rs  mod.rs  service_config.rs  subscriptions.rs
static/: 404.html
tests/: health_check.rs
