[package]
name = "email-newsletter"
version = "0.1.0"
authors = ["graphffiti-dev <graphffiti@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-files = "0.6.2"
serde = { version = "1.0.143", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.11"


[lib]
path = "src/lib.rs"

#If we want to specify mutliple binary crate and the names for each
#But if there is already a src/main.rs, rust will know that it has binary crate
# [[bin]]
# path = "src/main.rs"
# name = "email-newsletter"
